--- a/heritagesites/templates/heritagesites/base.html
+++ b/heritagesites/templates/heritagesites/base.html
@@ -28,10 +28,6 @@
       <ul class="navbar-nav mr-auto">
 
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'login' %}">login</a>
-        </li>
-
-        <li class="nav-item">
           <a class="nav-link" href="{% url 'about' %}">About</a>
         </li>
 
@@ -42,10 +38,15 @@
           <li class="nav-item">
           <a class="nav-link" href="{% url 'countries' %}">Countries/Areas</a>
         </li>
-             
-
-
       </ul>
+
+<ul class="navbar-nav mr-auto">
+
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'login' %}">Login</a>
+        </li>
+      </ul>
+
     </nav>
 
     <main>
