--- a/heritagesites/templates/heritagesites/country_area.html
+++ b/heritagesites/templates/heritagesites/country_area.html
@@ -7,7 +7,7 @@
 	  </header>
 
 
-	  {% include '< relative/path/to/pagination.html' %}
+	  {% include 'heritagesites/pagination.html' %}
 		
 
 	  {% if countries %}
@@ -16,7 +16,6 @@
 	    {% for country in countries %}
 
 		<li><a href="{% url 'country_area_detail' country.pk %}">{{ country.country_area_name | safe }}</a></li>
-
 
 	    {% endfor %}
 
@@ -32,7 +31,7 @@
 
 	{% else %}
     <a href="{% url 'login' %}">Log in</a>
-    
+
   {% endif %}
 {% endblock content %}}
 
