--- a/heritagesites/templates/heritagesites/site.html
+++ b/heritagesites/templates/heritagesites/site.html
@@ -1,9 +1,19 @@
 {% extends 'heritagesites/base.html' %} 
 {% block content %}
 <article>
-  <header>
-    <h2>UNESCO Heritage Sites</h2>
-  </header>
+  
+<header>
+  <div class="row">
+    <div class="col-sm-11">
+      <h2>UNESCO Heritage Sites</h2>
+    </div>
+    <div class="col-sm-1">
+      {% if user.is_authenticated %}
+        <a class="btn btn-outline-secondary" href="{% url 'site_new' %}">new</a>
+      {% endif %}
+    </div>
+  </div>
+</header
 
  {% include 'heritagesites/pagination.html' %}
   
