--- a/heritagesites/templates/heritagesites/base.html
+++ b/heritagesites/templates/heritagesites/base.html
@@ -21,25 +21,30 @@
   <body>
 
     <!-- A grey horizontal navbar that becomes vertical on small screens -->
-    <nav class="navbar navbar-expand-sm navbar-dark navbar-custom sticky-top px-4 py-2">
 
-      <div class="row">
-        <a class="navbar-brand" href="{% url 'home' %}">SI664 Heritage Sites</a>
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'about' %}">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'site' %}">Sites</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'country_area' %}">Countries/Areas</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'login' %}">Login</a>
-          </li>
-        </ul>
-      </div>
+
+
+
+<div class="row">
+  <a class="navbar-brand" href="{% url 'home' %}">SI664 Heritage Sites</a>
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'about' %}">about</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'sites' %}">sites</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'countries' %}">countries/areas</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'login' %}">login</a>
+    </li>
+  </ul>
+</div>
+
+
+
     </nav>
 
     <main class="px-4 py-3">
