--- a/heritagesites/templates/heritagesites/site_new.html
+++ b/heritagesites/templates/heritagesites/site_new.html
@@ -75,7 +75,7 @@
     </div>
 
     <button type="submit" class="btn btn-outline-success">Add</button>
-    &nbsp;<a class="btn btn-outline-secondary" href="{% url 'site' %}">cancel</a>
+    &nbsp;<a class="btn btn-outline-secondary" href="{% url 'sites' %}">cancel</a>
   </form>
 
 {% endblock content %}
