--- a/heritagesites/templates/heritagesites/site_update.html
+++ b/heritagesites/templates/heritagesites/site_update.html
@@ -84,7 +84,7 @@
   <button type="submit" class="btn btn-outline-success">Update</button>
   
   <!-- Restore missing button -->
-    &nbsp;<a class="btn btn-outline-secondary" href="{% url 'site' %}">cancel</a>
+    &nbsp;<a class="btn btn-outline-secondary" href="{% url 'sites' %}">cancel</a>
 
 </form>
 
