--- a/heritagesites/templates/heritagesites/base.html
+++ b/heritagesites/templates/heritagesites/base.html
@@ -21,9 +21,7 @@
   <body>
 
     <!-- A grey horizontal navbar that becomes vertical on small screens -->
-
-
-
+    <nav class="navbar navbar-expand-sm navbar-dark navbar-custom sticky-top px-4 py-2">
 
 <div class="row">
   <a class="navbar-brand" href="{% url 'home' %}">SI664 Heritage Sites</a>
