--- a/heritagesites/templates/heritagesites/site_delete.html
+++ b/heritagesites/templates/heritagesites/site_delete.html
@@ -2,7 +2,7 @@
 
 {% load crispy_forms_tags %}
 
-{% extends 'heritagesites/base.html' %}
+{% block content %}
   <!-- Restore missing fields rendered using Bootstrap rows and columns classes -->
     <div class="row">
       <div class="col-6">
