adding secrets.py

--- a/heritagesites/templates/heritagesites/site_delete.html
+++ b/heritagesites/templates/heritagesites/site_delete.html
@@ -1,83 +1,12 @@
 {% extends 'heritagesites/base.html' %}
-
-{% load crispy_forms_tags %}
-
 {% block content %}
-  <!-- Restore missing fields rendered using Bootstrap rows and columns classes -->
-    <div class="row">
-      <div class="col-6">
-        {{ form.heritage_site_category|as_crispy_field }}
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-6">
-        {{ form.country_area|as_crispy_field }}
-      </div>
-    </div>
-
-  <div class="row">
-    <div class="col-6">
-      {{ form.justification|as_crispy_field }}
-    </div>
-  </div>
-
-  <div class="row">
-      <div class="col-6">
-        {{ form.description|as_crispy_field }}
-      </div>
-    </div>
-
-  <div class="row">
-    <div class="col-6">
-      {{ form.date_inscribed|as_crispy_field }}
-    </div>
-  </div>
-
-    <div class="row">
-      <div class="col-6">
-        {{ form.site_name|as_crispy_field }}
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-3">
-        {{ form.longitude|as_crispy_field }}
-      </div>
-      <div class="col-3">
-        {{ form.latitude|as_crispy_field }}
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-6">
-        {{ form.area_hectares|as_crispy_field }}
-      </div>
-    </div>
-
-
-    <div class="row">
-      <div class="col-6">
-        {{ form.heritage_site_category|as_crispy_field }}
-      </div>
-    </div>
-  <!-- Restore missing fields rendered using Bootstrap rows and columns classes --> 
-
-
-  <div class="row">
-    <div class="col-6">
-      {{ form.transboundary|as_crispy_field }}
-    </div>
-  </div>
 
 
   <form method="post">
     {% csrf_token %}
-    <p>Are you sure you want to delete the Heritage Site "{{ site.site_name }}"?</p>
-    <button type="submit" class="btn btn-outline-danger">Delete</button>
-    <a class="btn btn-outline-secondary" href="{% url 'sites' site.pk %}">cancel</a>
+    <p>Are you sure you want to delete the Heritage Site "{{ sites.site_name }}"?</p>
+    <button type="submit" class="btn btn-outline-danger">delete</button>
+    <a class="btn btn-outline-secondary" href="{% url 'site' sites.pk 
+    %}">cancel</a>
   </form>
-
-
-
 {% endblock content %}
