--- a/heritagesites/templates/heritagesites/site_detail.html
+++ b/heritagesites/templates/heritagesites/site_detail.html
@@ -23,7 +23,7 @@
        </div>
      </header>
    
-     {% if site.country_area.all %}
+<!--      {% if site.country_area.all %}
        <div class="row">
          <div class="col-sm-2">
            <p>Region</p>
@@ -87,7 +87,75 @@
        </div>
    
      {% endif %}
-   
+    -->
+
+{% if site.country_area_names %}
+    <div class="row">
+      <div class="col-sm-2">
+        <p>Country Area Names</p>
+      </div>
+      <div class="col-sm-10">
+        <p>{{ site.country_area_names }}</p>
+      </div>
+    </div>
+  {% endif %}
+
+  {% if site.region_names %}
+    <div class="row">
+      <div class="col-sm-2">
+        <p>Region Names</p>
+      </div>
+      <div class="col-sm-10">
+        <p>{{ site.region_names }}</p>
+      </div>
+    </div>
+  {% endif %}
+
+  {% if site.sub_region_names %}
+    <div class="row">
+      <div class="col-sm-2">
+        <p>Sub Region Names</p>
+      </div>
+      <div class="col-sm-10">
+        <p>{{ site.sub_region_names }}</p>
+      </div>
+    </div>
+  {% endif %}
+
+  {% if site.intermediate_region_names %}
+    <div class="row">
+      <div class="col-sm-2">
+        <p>Intermediate Region Names</p>
+      </div>
+      <div class="col-sm-10">
+        <p>{{ site.intermediate_region_names }}</p>
+      </div>
+    </div>
+  {% endif %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
      {% if site.heritage_site_category.category_name %}
        <div class="row">
          <div class="col-sm-2">
