--- a/heritagesites/templates/heritagesites/site_filter.html
+++ b/heritagesites/templates/heritagesites/site_filter.html
@@ -22,7 +22,7 @@
     <div class="col-sm-9">
       {% for site in sites %}
 
-        <h4><a href="{% url 'site_detail' sites.pk %}">{{ site.site_name | safe }}</a></h4>
+        <h4><a href="{% url 'sites' sites.pk %}">{{ site.site_name | safe }}</a></h4>
 
         <!-- add the country_area_names and description template tags -->
 
