change path name to site_filter

--- a/heritagesites/templates/heritagesites/base.html
+++ b/heritagesites/templates/heritagesites/base.html
@@ -31,7 +31,7 @@
             <a class="nav-link" href="{% url 'about' %}">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'search' %}">Sites</a>
+            <a class="nav-link" href="{% url 'site_filter' %}">Sites</a>
           </li>
           <!--
           <li class="nav-item">
