models indented correctly

--- a/heritagesites/templates/heritagesites/site_detail.html
+++ b/heritagesites/templates/heritagesites/site_detail.html
@@ -88,22 +88,10 @@
    
      {% endif %}
     -->
-
-{% if site.country_area_names %}
-    <div class="row">
-      <div class="col-sm-2">
-        <p>Country Area Names</p>
-      </div>
-      <div class="col-sm-10">
-        <p>{{ site.country_area_names }}</p>
-      </div>
-    </div>
-  {% endif %}
-
   {% if site.region_names %}
     <div class="row">
       <div class="col-sm-2">
-        <p>Region Names</p>
+        <p>Region</p>
       </div>
       <div class="col-sm-10">
         <p>{{ site.region_names }}</p>
@@ -114,7 +102,7 @@
   {% if site.sub_region_names %}
     <div class="row">
       <div class="col-sm-2">
-        <p>Sub Region Names</p>
+        <p>Sub Region</p>
       </div>
       <div class="col-sm-10">
         <p>{{ site.sub_region_names }}</p>
@@ -125,7 +113,7 @@
   {% if site.intermediate_region_names %}
     <div class="row">
       <div class="col-sm-2">
-        <p>Intermediate Region Names</p>
+        <p>Intermediate Region</p>
       </div>
       <div class="col-sm-10">
         <p>{{ site.intermediate_region_names }}</p>
@@ -133,6 +121,16 @@
     </div>
   {% endif %}
 
+ {% if site.country_area_names %}
+    <div class="row">
+      <div class="col-sm-2">
+        <p>Country/Area</p>
+      </div>
+      <div class="col-sm-10">
+        <p>{{ site.country_area_names }}</p>
+      </div>
+    </div>
+  {% endif %}
 
      {% if site.heritage_site_category.category_name %}
        <div class="row">
@@ -143,7 +141,7 @@
            <p>{{ site.heritage_site_category.category_name }}</p>
          </div>
        </div>
-     {% endif %}
+    {% endif %}
    
      <!-- SHOW STUDENTS THAT TEMPLATE NEEDS FIXING: EXTRA <p> -->
      {% if site.description %}
