--- a/heritagesites/templates/heritagesites/site_filter.html
+++ b/heritagesites/templates/heritagesites/site_filter.html
@@ -12,9 +12,7 @@
           <!-- add a submit button -->
 
           <button type="submit" class="btn btn-outline-success">Filter</button>
-    		&nbsp;<a class="btn btn-outline-secondary" href="{% url 'sites' %}">cancel</a>
-
-
+    		<!-- &nbsp;<a class="btn btn-outline-secondary" href="{% url 'sites' %}">cancel</a> -->
 
         </form>
       </div>
@@ -26,22 +24,17 @@
 
         <!-- add the country_area_names and description template tags -->
 
-		   {% if site.country_area_name %}
+		   {% if site.country_area_names %}
 		    <div class="row">
-		      <div class="col-sm-2">
-		        <p>Country Area Names</p>
-		      </div>
 		      <div class="col-sm-10">
-		        {{ site.country_area_name | safe }}
+		      	<p> 
+		        {{ site.country_area_names | safe }}
 		      </div>
 		    </div>
 		  {% endif %}
 
 		    {% if site.description %}
 		       <div class="row">
-		         <div class="col-sm-2">
-		           <p>Description</p>
-		         </div>
 		         <div class="col-sm-10">
 		           {{ site.description | safe }}
 		         </div>
